--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+/*=================================
+Author: Md Tamim Hossain
+Mobile: 01609604791
+
+
+Css Design==>
+1- Root
+2- header
+2.1 - navbar
+3- content
+
+
+
+=================================*/
 * {
   margin: 0;
   padding: 0;
@@ -8,15 +22,15 @@
   height: 100dvh;
   background-image: url("./assets/bg_main.gif");
   background-position: top;
-  padding: 0 15%;
+  padding: 0 10%;
 }
 .container {
-  width: 100%;
+  max-width: 960px;
   margin: 0 auto;
 }
+/*header */
 .header {
   width: 100%;
-
   box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.4);
 }
 .header__top {
@@ -25,6 +39,9 @@
   color: #fff;
   font-size: 0.8em;
   border-bottom: 4px solid #609513;
+}
+.header__top p {
+  font-size: 1em;
 }
 .header__title {
   display: flex;
@@ -39,3 +56,63 @@
 .header__content p {
   text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.6);
 }
+
+/*navbar==========*/
+.nav{
+  padding:10px;
+}
+.nav ul{
+  list-style:none;
+  display:flex; 
+  gap:10px;
+}
+.nav ul li{
+  cursor:pointer;
+  padding:4px;
+  border-radius:5px;
+  transition: 0.2s linear;
+}
+
+.nav ul li.active{
+  background:#683091;
+  color:#fff;
+}
+.nav ul li:hover{
+  background:#683091;
+  color:#fff;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .container {
+    max-width: 100%;
+  }
+  .body {
+    padding: 0 2%;
+  }
+  .header__title img {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+/*content============= */
+.content{
+  width:100%;
+  min-height:100px;
+  display:flex;
+  justify-content:space-between;
+  margin-top:20px;
+  box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.4);
+}
+.content__main{
+  width:70%;
+  border:1px solid green;
+
+}
+.content__sidebar{
+  width:28%;
+  border:1px solid green;
+}
+
+
